--- a/HubApp/package.json
+++ b/HubApp/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "react": "^0.14.8",
     "react-native": "^0.24.0",
+    "react-native-vector-icons": "^1.3.4",
     "react-redux": "^4.4.2",
     "redux": "^3.4.0",
     "redux-saga": "^0.9.5",
