--- a/HubApp/package.json
+++ b/HubApp/package.json
@@ -8,8 +8,8 @@
     "lint-fix": "eslint --fix --config .eslintrc index.android.js index.ios.js App/"
   },
   "dependencies": {
-    "react": "^0.14.8",
-    "react-native": "^0.25.1",
+    "react": "^15.0.2",
+    "react-native": "^0.26.0-rc",
     "react-native-vector-icons": "^1.3.4",
     "react-redux": "^4.4.2",
     "redux": "^3.4.0",
