--- a/HubApp/package.json
+++ b/HubApp/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test": "jest",
     "lint": "eslint --config .eslintrc index.android.js index.ios.js App/; flow || true",
     "lint-fix": "eslint --fix --config .eslintrc index.android.js index.ios.js App/"
   },
@@ -23,6 +24,7 @@
     "eslint-config-airbnb": "^7.0.0",
     "eslint-plugin-immutable": "^1.0.0",
     "eslint-plugin-jsx-a11y": "^0.6.2",
-    "eslint-plugin-react": "^4.3.0"
+    "eslint-plugin-react": "^4.3.0",
+    "jest-cli": "^12.0.2"
   }
 }
