😇 Unit testing setup (now mocha because of Dan)

--- a/HubApp/.eslintrc
+++ b/HubApp/.eslintrc
@@ -4,6 +4,9 @@
   "plugins": [
     "immutable"
   ],
+  "env": {
+    "mocha": true
+  },
   "rules": {
     "comma-dangle": 0,
     "complexity": [2, 5],
