--- a/HubApp/package.json
+++ b/HubApp/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest",
-    "lint": "eslint --config .eslintrc index.android.js index.ios.js App/; flow || true",
+    "test": "mocha --compilers js:babel-register --recursive",
+    "test:watch": "npm test -- --watch",
+    "lint": "eslint --config .eslintrc index.android.js index.ios.js App/ __tests__/; flow || true",
     "lint-fix": "eslint --fix --config .eslintrc index.android.js index.ios.js App/"
   },
   "dependencies": {
+    "expect": "^1.20.0",
     "react": "^15.0.2",
     "react-native": "^0.26.0-rc",
     "react-native-vector-icons": "^1.3.4",
@@ -20,11 +22,14 @@
   },
   "devDependencies": {
     "babel-eslint": "^6.0.2",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-stage-2": "^6.5.0",
+    "babel-register": "^6.8.0",
     "eslint": "^2.7.0",
     "eslint-config-airbnb": "^7.0.0",
     "eslint-plugin-immutable": "^1.0.0",
     "eslint-plugin-jsx-a11y": "^0.6.2",
     "eslint-plugin-react": "^4.3.0",
-    "jest-cli": "^12.0.2"
+    "mocha": "^2.4.5"
   }
 }
