--- a/HubApp/package.json
+++ b/HubApp/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "mocha --compilers js:babel-register --recursive",
+    "test": "node node_modules/mocha/bin/mocha --compilers js:babel-register --recursive",
     "test:watch": "npm test -- --watch",
     "lint": "eslint --config .eslintrc index.android.js index.ios.js App/ __tests__/; flow || true",
     "lint-fix": "eslint --fix --config .eslintrc index.android.js index.ios.js App/"
@@ -22,8 +22,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^6.0.2",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-2": "^6.5.0",
+    "babel-preset-react-native": "^1.7.0",
     "babel-register": "^6.8.0",
     "eslint": "^2.7.0",
     "eslint-config-airbnb": "^7.0.0",
