--- a/HubApp/package.json
+++ b/HubApp/package.json
@@ -13,6 +13,7 @@
     "expect": "^1.20.0",
     "react": "^15.0.2",
     "react-native": "^0.26.0-rc",
+    "react-native-linear-gradient": "^1.5.6",
     "react-native-vector-icons": "^1.3.4",
     "react-redux": "^4.4.2",
     "redux": "^3.4.0",
