--- a/HubApp/package.json
+++ b/HubApp/package.json
@@ -6,8 +6,8 @@
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "node node_modules/mocha/bin/mocha --compilers js:babel-register --recursive",
     "test:watch": "npm test -- --watch",
-    "lint": "eslint --config .eslintrc index.android.js index.ios.js App/ __tests__/; flow || true",
-    "lint-fix": "eslint --fix --config .eslintrc index.android.js index.ios.js App/"
+    "lint": "./node_modules/eslint/bin/eslint.js --config .eslintrc index.android.js index.ios.js App/ __tests__/; flow || true",
+    "lint:fix": "./node_modules/eslint/bin/eslint.js --fix --config .eslintrc index.android.js index.ios.js App/"
   },
   "dependencies": {
     "expect": "^1.20.0",
