--- a/HubApp/package.json
+++ b/HubApp/package.json
@@ -13,7 +13,7 @@
     "expect": "^1.20.0",
     "immutable": "^3.8.1",
     "react": "^15.0.2",
-    "react-native": "^0.26.0-rc",
+    "react-native": "^0.26.0",
     "react-native-linear-gradient": "^1.5.6",
     "react-native-vector-icons": "^1.3.4",
     "react-redux": "^4.4.2",
@@ -31,6 +31,7 @@
     "eslint-plugin-immutable": "^1.0.0",
     "eslint-plugin-jsx-a11y": "^0.6.2",
     "eslint-plugin-react": "^4.3.0",
-    "mocha": "^2.4.5"
+    "mocha": "^2.4.5",
+    "rnpm-plugin-upgrade": "^0.26.0"
   }
 }
