--- a/HubApp/package.json
+++ b/HubApp/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "expect": "^1.20.0",
     "immutable": "^3.8.1",
-    "react": "^15.0.2",
+    "react": "15.0.2",
     "react-native": "^0.26.0",
     "react-native-linear-gradient": "^1.5.6",
     "react-native-vector-icons": "^1.3.4",
