--- a/HubApp/package.json
+++ b/HubApp/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^6.0.2",
+    "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-react-native": "^1.7.0",
     "babel-register": "^6.8.0",
     "eslint": "^2.7.0",
