--- a/HubApp/package.json
+++ b/HubApp/package.json
@@ -10,6 +10,7 @@
     "lint:fix": "node ./node_modules/eslint/bin/eslint.js --fix --config .eslintrc index.android.js index.ios.js App/"
   },
   "dependencies": {
+    "babel-polyfill": "^6.9.0",
     "expect": "^1.20.0",
     "immutable": "^3.8.1",
     "react": "15.0.2",
@@ -24,7 +25,6 @@
   },
   "devDependencies": {
     "babel-eslint": "^6.0.2",
-    "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-react-native": "^1.7.0",
     "babel-register": "^6.8.0",
     "eslint": "^2.7.0",
