--- a/HubApp/.eslintrc
+++ b/HubApp/.eslintrc
@@ -17,6 +17,7 @@
     "immutable/no-let": 2,
     "immutable/no-mutation": 2,
     "arrow-body-style": 0,
-    "no-use-before-define": 0
+    "no-use-before-define": 0,
+    "new-cap": 0
   }
 }
