--- a/HubApp/package.json
+++ b/HubApp/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start -- --reset-cache",
+    "packager:kill": "lsof -n -i4TCP:8081 | sed '1 d' | awk '{print $2}' | xargs kill",
     "test": "node node_modules/mocha/bin/mocha --compilers js:babel-register --recursive",
     "test:watch": "npm test -- --watch",
     "lint": "node ./node_modules/eslint/bin/eslint.js --config .eslintrc index.android.js index.ios.js App/ __tests__/; flow || true",
