--- a/HubApp/package.json
+++ b/HubApp/package.json
@@ -20,6 +20,8 @@
     "react-native-vector-icons": "^2.0.3",
     "react-redux": "^4.4.2",
     "redux": "^3.4.0",
+    "redux-persist": "^3.2.2",
+    "redux-persist-transform-immutable": "^3.1.0",
     "redux-saga": "^0.9.5",
     "redux-thunk": "^2.0.1",
     "remote-redux-devtools": "^0.3.3"
