Added some Integrationstest! :)

--- a/HubApp/package.json
+++ b/HubApp/package.json
@@ -6,7 +6,7 @@
     "start": "node node_modules/react-native/local-cli/cli.js start -- --reset-cache",
     "packager:kill": "lsof -n -i4TCP:8081 | sed '1 d' | awk '{print $2}' | xargs kill",
     "bundle": "react-native bundle --platform ios --entry-file index.ios.js --bundle-output ./main.jsbundle --assets-dest ./release --dev false",
-    "test": "node node_modules/mocha/bin/mocha --compilers js:babel-register --recursive",
+    "test": "node node_modules/mocha/bin/mocha --compilers js:babel-register --recursive --timeout 3000",
     "test:watch": "npm test -- --watch",
     "lint": "node ./node_modules/eslint/bin/eslint.js --config .eslintrc index.android.js index.ios.js App/ __tests__/; flow || true",
     "lint:fix": "node ./node_modules/eslint/bin/eslint.js --fix --config .eslintrc index.android.js index.ios.js App/"
